.kube/worker/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo
  namespace: dev
  labels:
    app: k8s-demo
spec:
  selector:
    matchLabels:
      app: k8s-demo
  replicas: 4
  revisionHistoryLimit: 10
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: k8s-demo
    spec:
      containers:
      - image: twogg/server:v1.0
        imagePullPolicy: IfNotPresent
        name: k8s-demo
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
