.kube/worker/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-svc
  namespace: dev
  labels:
    app: k8s-demo
spec:
  ports:
    - name: api
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: k8s-demo
