.kube/worker/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  namespace: dev
spec:
  rules:
  - host: k8s-demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-demo-svc
          servicePort: api
